IPBRPMS-2455 1)master seed can build codereview & utility jobs. 	     2)reviewer's master seed job can be init now.
Change-Id: I9abb8636b73ebdc2f19b2fde5195942a547375c3